--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -14,15 +14,20 @@ on:
         type: string
         default: "--skip"
 
+env:
+  SWIFTLY_BOOTSTRAP_VERSION: 0.4.0-dev
+
 jobs:
   buildrelease:
     name: Build Release
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-rhel-ubi9"
+      image: "redhat/ubi9"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly
       - name: Build Release Artifact
         run: swift run build-swiftly-release --use-rhel-ubi9 ${{ inputs.skip }} ${{ inputs.version }}
       - name: Upload Release Artifact
