--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches: [main]
 
+env:
+  SWIFTLY_BOOTSTRAP_VERSION: 0.4.0-dev
+
 jobs:
   soundness:
     name: Soundness
@@ -19,24 +22,33 @@ jobs:
       shell_check_enabled: false
       unacceptable_language_check_enabled: true
 
-  tests:
-    name: Test
-    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
-    with:
-      linux_os_versions: "[\"jammy\", \"focal\", \"rhel-ubi9\", \"noble\", \"bookworm\", \"fedora39\"]"
-      # We only care about the current stable release, because that's where we make our swiftly releases
-      linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
-      linux_pre_build_command: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh
-      enable_windows_checks: false
+  tests-selfhosted:
+    name: Test (Self Hosted) / ${{ matrix.container }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        container: ["ubuntu:20.04", "ubuntu:22.04", "ubuntu:24.04", "redhat/ubi9", "debian:12", "fedora:39"]
+    container:
+      image: ${{ matrix.container }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly
+      - name: Build and Test
+        run: swift test
 
   releasebuildcheck:
     name: Release Build Check
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-rhel-ubi9"
+      image: "redhat/ubi9"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly
       - name: Build Artifact
         run: swift run build-swiftly-release --use-rhel-ubi9 --skip "999.0.0"
       - name: Upload Artifact
@@ -49,27 +61,31 @@ jobs:
 
   formatcheck:
     name: Format Check
-    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
-    with:
-      # We only need to run this with one swift release and on one of the linux distributions
-      linux_os_versions: "[\"jammy\"]"
-      linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
-      linux_pre_build_command: ./scripts/prep-gh-action.sh
-      linux_build_command: swift run swiftformat --lint --dryrun . || (echo "Please run 'swift run swiftformat .' to format the source code."; exit 1)
-      enable_windows_checks: false
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly
+      - name: Check format
+        run: swift run swiftformat --lint --dryrun . || (echo "Please run 'swift run swiftformat .' to format the source code."; exit 1)
 
   docscheck:
     name: Documentation Check
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-noble"
+      image: ubuntu:24.04
     steps:
+      - name: Install git
+        run: apt-get update && apt-get -y install git
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Prepare the action
-        run: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh
+        run: ./scripts/prep-gh-action.sh --install-swiftly
       - name: Generate Swiftly CLI Reference and Check for Differences
-        run: swift package plugin --allow-writing-to-package-directory generate-docs-reference && git config --global --add safe.directory $(pwd) && git diff --exit-code Documentation/SwiftlyDocs.docc/swiftly-cli-reference.md || (echo "The documentation hasn't been updated with the latest swiftly command-line reference. Please run 'swift package plugin generate-docs-reference' and commit/push the changes."; exit 1)
+        run: swift package plugin --allow-writing-to-package-directory generate-docs-reference && bash -c 'git config --global --add safe.directory $(pwd)' && git diff --exit-code Documentation/SwiftlyDocs.docc/swiftly-cli-reference.md || (echo "The documentation hasn't been updated with the latest swiftly command-line reference. Please run `swift package plugin generate-docs-reference` and commit/push the changes."; exit 1)
       - name: Generate Documentation Set
         run: swift package --allow-writing-to-directory .build/docs generate-documentation --target SwiftlyDocs --output-path .build/docs
       - name: Upload Documentation Artifacts
